--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
-
+JWT_SECRET="s31lTNCEsrggp/seKpgswKnY5KB+TGMpg+bMy3HGPw8="
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
